--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
+.*.swp
+*.tmp
 blib/
 Build
 _build
 Makefile
-pm_to_blib
-META.json
+META.*
 MYMETA.*
+pm_to_blib
 *.tar.gz
 tmp/
-.*.swp
-*.tmp
 ~*
