--- a/Random-BestTiny/META.yml
+++ b/Random-BestTiny/META.yml
@@ -15,16 +15,20 @@ name: Random-BestTiny
 provides:
   Random::BestTiny::ApiRand:
     file: lib/Random/BestTiny/ApiRand.pm
-    version: 0
+    version: 0.2
   Random::BestTiny::ApiUnix:
     file: lib/Random/BestTiny/ApiUnix.pm
-    version: 0
+    version: 0.3
   Random::BestTiny::ApiWin32:
     file: lib/Random/BestTiny/ApiWin32.pm
-    version: 0
+    version: 0.3
   Random::BestTiny::moduleList:
     file: lib/Random/BestTiny/moduleList.pm
-    version: 0
+    version: 0.2
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.1
+version: 0.003
+x_repository:
+  type: git
+  url: git:/github.com/GilbertsHub/CPAN
+  web: https://github.com/GilbertsHub/CPAN
